--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
     "start": "node src/",
-    "watch": "nodemon src/",
+    "watch": "nodemon --inspect src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
@@ -31,10 +31,12 @@
     "feathers-configuration": "^0.2.3",
     "feathers-errors": "^2.2.0",
     "feathers-hooks": "^1.5.4",
+    "feathers-memory": "^0.8.1",
     "feathers-mongoose": "^3.3.7",
     "feathers-rest": "^1.4.2",
     "feathers-socketio": "^1.4.1",
     "mongoose": "^4.4.20",
+    "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-facebook-token": "^3.2.0",
