--- a/package.json
+++ b/package.json
@@ -23,28 +23,27 @@
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
-    "cors": "^2.7.1",
-    "feathers": "^2.0.1",
-    "feathers-authentication": "^0.7.8",
-    "feathers-configuration": "^0.2.3",
-    "feathers-errors": "^2.2.0",
-    "feathers-hooks": "^1.5.4",
-    "feathers-memory": "^0.8.1",
-    "feathers-mongoose": "^3.3.7",
-    "feathers-rest": "^1.4.2",
-    "feathers-socketio": "^1.4.1",
+    "cors": "^2.8.1",
+    "feathers": "^2.0.3",
+    "feathers-authentication": "^1.0.2",
+    "feathers-authentication-jwt": "^0.3.1",
+    "feathers-authentication-oauth2": "^0.2.3",
+    "feathers-configuration": "^0.4.1",
+    "feathers-errors": "^2.5.0",
+    "feathers-hooks": "^1.7.1",
+    "feathers-memory": "^1.0.1",
+    "feathers-mongoose": "^3.6.1",
+    "feathers-rest": "^1.6.0",
+    "feathers-socketio": "^1.4.2",
     "mongoose": "^4.4.20",
     "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
-    "passport-facebook-token": "^3.2.0",
-    "passport-google-oauth20": "^1.0.0",
-    "passport-google-token": "^0.1.2",
-    "passport-linkedin-oauth2": "^1.4.1",
-    "passport-linkedin-token-oauth2": "^0.1.3",
+    "passport-facebook-token": "^3.3.0",
     "serve-favicon": "^2.3.0",
+    "stripe": "^4.14.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
